Виконав правки ментора

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <ul class="preferences-list">
                     <li class="preference-item">
                         <div class="preference-box">
-                            <svg class="preference-icon" width="70" hedth="70">
+                            <svg class="preference-icon" width="70" height="70">
                                 <use href="img/sprite.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -73,7 +73,7 @@
                     </li>
                     <li class="preference-item">
                         <div class="preference-box">
-                            <svg class="preference-icon" width="70" hedth="70">
+                            <svg class="preference-icon" width="70" height="70">
                                 <use href="img/sprite.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -84,7 +84,7 @@
                     </li>
                     <li class="preference-item">
                         <div class="preference-box">
-                            <svg class="preference-icon" width="70" hedth="70">
+                            <svg class="preference-icon" width="70" height="70">
                                 <use href="img/sprite.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -95,7 +95,7 @@
                     </li>
                     <li class="preference-item">
                         <div class="preference-box">
-                            <svg class="preference-icon" width="70" hedth="70">
+                            <svg class="preference-icon" width="70" height="70">
                                 <use href="img/sprite.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -133,20 +133,24 @@
                             <h3 class="team-subtitle">Игорь Демьяненко</h3>
                             <p lang="en" class="team-text">Product Designer</p>
                             <ul class="icon-list">
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Інстаграм" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.instagram.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Твітер" target="_blank"
+                                        rel="noopener noreferrer" href="https://twitter.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Фейсбук" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.facebook.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Лінкідим" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.linkedin.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
@@ -158,20 +162,24 @@
                             <h3 class="team-subtitle">Ольга Репина</h3>
                             <p lang="en" class="team-text">Frontend Developer</p>
                             <ul class="icon-list">
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Інстаграм" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.instagram.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Твітер" target="_blank"
+                                        rel="noopener noreferrer" href="https://twitter.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Фейсбук" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.facebook.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Лінкідим" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.linkedin.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
@@ -184,20 +192,24 @@
                             <h3 class="team-subtitle">Николай Тарасов</h3>
                             <p lang="en" class="team-text">Marketing</p>
                             <ul class="icon-list">
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Інстаграм" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.instagram.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Твітер" target="_blank"
+                                        rel="noopener noreferrer" href="https://twitter.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Фейсбук" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.facebook.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Лінкідим" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.linkedin.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
@@ -210,20 +222,24 @@
                             <h3 class="team-subtitle">Михаил Ермаков</h3>
                             <p lang="en" class="team-text">UI Designer</p>
                             <ul class="icon-list">
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Інстаграм" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.instagram.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Твітер" target="_blank"
+                                        rel="noopener noreferrer" href="https://twitter.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Фейсбук" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.facebook.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                                        href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                                <li class="icon-item"><a class="icon-link" aria-lable="Лінкідим" target="_blank"
+                                        rel="noopener noreferrer" href="https://www.linkedin.com/"><svg class="icon"
+                                            width="20" height="20">
                                             <use href="./img/sprite.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
@@ -237,28 +253,28 @@
         <section class="customer-section container">
             <h2 class="customer-title">Постоянные клиенты</h2>
             <ul class="customer-list">
-                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="41"
-                            height="47">
+                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт один"><svg
+                            class="customer-icon" width="41" height="47">
                             <use href="./img/sprite.svg#icon-client-1"></use>
                         </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="40"
-                            height="52">
+                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт два"><svg
+                            class="customer-icon" width="40" height="52">
                             <use href="./img/sprite.svg#icon-client-2"></use>
                         </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="43"
-                            height="41">
+                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт три"><svg
+                            class="customer-icon" width="43" height="41">
                             <use href="./img/sprite.svg#icon-client-3"></use>
                         </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="84"
-                            height="41">
+                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт чотири"><svg
+                            class="customer-icon" width="84" height="41">
                             <use href="./img/sprite.svg#icon-client-4"></use>
                         </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="63"
-                            height="45">
+                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт пять"><svg
+                            class="customer-icon" width="63" height="45">
                             <use href="./img/sprite.svg#icon-client-5"></use>
                         </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link"><svg class="customer-icon" width="94"
-                            height="44">
+                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт шість"><svg
+                            class="customer-icon" width="94" height="44">
                             <use href="./img/sprite.svg#icon-client-6"></use>
                         </svg></a></li>
             </ul>
@@ -284,20 +300,24 @@
             <div class="footer-social">
                 <p class="social-text">присоединяйтесь</p>
                 <ul class="social icon-list">
-                    <li class="social icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                            href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                    <li class="social icon-item"><a class="icon-link" aria-lable="Інстаграм" target="_blank"
+                            rel="noopener noreferrer" href="https://www.instagram.com/"><svg class="icon" width="20"
+                                height="20">
                                 <use href="./img/sprite.svg#icon-instagram"></use>
                             </svg></a></li>
-                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                            href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                    <li class="icon-item"><a class="icon-link" aria-lable="Твітер" target="_blank"
+                            rel="noopener noreferrer" href="https://twitter.com/"><svg class="icon" width="20"
+                                height="20">
                                 <use href="./img/sprite.svg#icon-twitter"></use>
                             </svg></a></li>
-                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                            href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                    <li class="icon-item"><a class="icon-link" aria-lable="Фейсбук" target="_blank"
+                            rel="noopener noreferrer" href="https://www.facebook.com/"><svg class="icon" width="20"
+                                height="20">
                                 <use href="./img/sprite.svg#icon-facebook"></use>
                             </svg></a></li>
-                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                            href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                    <li class="icon-item"><a class="icon-link" aria-lable="Лінкідим" target="_blank"
+                            rel="noopener noreferrer" href="https://www.linkedin.com/"><svg class="icon" width="20"
+                                height="20">
                                 <use href="./img/sprite.svg#icon-linkedin"></use>
                             </svg></a></li>
                 </ul>
