--- a/portfolio.html
+++ b/portfolio.html
@@ -183,20 +183,24 @@
             <div class="footer-social">
                 <p class="social-text">присоединяйтесь</p>
                 <ul class="social icon-list">
-                    <li class="social icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                            href="https://www.instagram.com/"><svg class="icon" width="20" height="20">
+                    <li class="social icon-item"><a class="icon-link" aria-lable="Інстаграм" target="_blank"
+                            rel="noopener noreferrer" href="https://www.instagram.com/"><svg class="icon" width="20"
+                                height="20">
                                 <use href="./img/sprite.svg#icon-instagram"></use>
                             </svg></a></li>
-                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                            href="https://twitter.com/"><svg class="icon" width="20" height="20">
+                    <li class="icon-item"><a class="icon-link" aria-lable="Твітер" target="_blank"
+                            rel="noopener noreferrer" href="https://twitter.com/"><svg class="icon" width="20"
+                                height="20">
                                 <use href="./img/sprite.svg#icon-twitter"></use>
                             </svg></a></li>
-                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                            href="https://www.facebook.com/"><svg class="icon" width="20" height="20">
+                    <li class="icon-item"><a class="icon-link" aria-lable="Фейсбук" target="_blank"
+                            rel="noopener noreferrer" href="https://www.facebook.com/"><svg class="icon" width="20"
+                                height="20">
                                 <use href="./img/sprite.svg#icon-facebook"></use>
                             </svg></a></li>
-                    <li class="icon-item"><a class="icon-link" target="_blank" rel="noopener noreferrer"
-                            href="https://www.linkedin.com/"><svg class="icon" width="20" height="20">
+                    <li class="icon-item"><a class="icon-link" aria-lable="Лінкідим" target="_blank"
+                            rel="noopener noreferrer" href="https://www.linkedin.com/"><svg class="icon" width="20"
+                                height="20">
                                 <use href="./img/sprite.svg#icon-linkedin"></use>
                             </svg></a></li>
                 </ul>
