--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
                 <ul class="portfolio-list">
                     <!-- Технокряк -->
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="#">
+                        <a class="portfolio-link" href="">
                             <img class="portfolio-img" src="./img/технокряк.jpg" alt="Веб-сайт Технокряк" width="370"
                                 height="294">
                             <div class="box-portfolio-item">
@@ -87,7 +87,7 @@
                     </li>
                     <!-- Ресторан Seafood -->
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="#">
+                        <a class="portfolio-link" href="">
                             <img class="portfolio-img" src="./img/ресторан-seafood.jpg"
                                 alt="Приложение Ресторан Seafood" width="370" height="294">
                             <div class="box-portfolio-item">
@@ -98,7 +98,7 @@
                     </li>
                     <!-- Проект Prime -->
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="#">
+                        <a class="portfolio-link" href="">
                             <img class="portfolio-img" src="./img/проект-prime.jpg" alt="Маркетинг-проект Prime">
                             <div class="box-portfolio-item">
                                 <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
