--- a/index.html
+++ b/index.html
@@ -250,34 +250,36 @@
         </section>
 
         <!-- Loyal customer -->
-        <section class="customer-section container">
-            <h2 class="customer-title">Постоянные клиенты</h2>
-            <ul class="customer-list">
-                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт один"><svg
-                            class="customer-icon" width="106" height="60">
-                            <use href="./img/sprite.svg#icon-client-1"></use>
-                        </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт два"><svg
-                            class="customer-icon" width="106" height="60">
-                            <use href="./img/sprite.svg#icon-client-2"></use>
-                        </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт три"><svg
-                            class="customer-icon" width="106" height="60">
-                            <use href="./img/sprite.svg#icon-client-3"></use>
-                        </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт чотири"><svg
-                            class="customer-icon" width="106" height="60">
-                            <use href="./img/sprite.svg#icon-client-4"></use>
-                        </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт пять"><svg
-                            class="customer-icon" width="106" height="60">
-                            <use href="./img/sprite.svg#icon-client-5"></use>
-                        </svg></a></li>
-                <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт шість"><svg
-                            class="customer-icon" width="106" height="60">
-                            <use href="./img/sprite.svg#icon-client-6"></use>
-                        </svg></a></li>
-            </ul>
+        <section class="customer-section">
+            <div class="container">
+                <h2 class="customer-title">Постоянные клиенты</h2>
+                <ul class="customer-list">
+                    <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт один"><svg
+                                class="customer-icon" width="106" height="60">
+                                <use href="./img/sprite.svg#icon-client-1"></use>
+                            </svg></a></li>
+                    <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт два"><svg
+                                class="customer-icon" width="106" height="60">
+                                <use href="./img/sprite.svg#icon-client-2"></use>
+                            </svg></a></li>
+                    <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт три"><svg
+                                class="customer-icon" width="106" height="60">
+                                <use href="./img/sprite.svg#icon-client-3"></use>
+                            </svg></a></li>
+                    <li class="customer-item"><a href="#" class="customer-link"
+                            aria-lable="Постійний клієнт чотири"><svg class="customer-icon" width="106" height="60">
+                                <use href="./img/sprite.svg#icon-client-4"></use>
+                            </svg></a></li>
+                    <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт пять"><svg
+                                class="customer-icon" width="106" height="60">
+                                <use href="./img/sprite.svg#icon-client-5"></use>
+                            </svg></a></li>
+                    <li class="customer-item"><a href="#" class="customer-link" aria-lable="Постійний клієнт шість"><svg
+                                class="customer-icon" width="106" height="60">
+                                <use href="./img/sprite.svg#icon-client-6"></use>
+                            </svg></a></li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- Footer section-->
